# text_extraction

./: CMakeLists.txt  group_classifier.h  main.cpp  region.h  region_classifier.h
